--- a/html - css - boostrap/css/styles.css
+++ b/html - css - boostrap/css/styles.css
@@ -1,22 +1,51 @@
 /* Comentario es CTRL + K + C */
 
-/*  selectores */
-/* por etiqueta */
+/* Selectores*/
+/* Por etiqueta es con su propio nombre*/
+/* Por clase  es con punto */
+/* Por id es con #*/
 
-body{
-    background: rgb(34,193,195);
-background: radial-gradient(circle, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+/* DESARROLLO */
+
+header{
+    text-align: center;
+    color: #034f84;
+    background: -webkit-linear-gradient(#062794, #6f00ff, rgb(236, 0, 0));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
+main{
+    display: flexbox;
+}
+
+
+/* Gradiante del fondo de la página */
+body{
+    background: rgb(34,193,195);
+    background: radial-gradient(circle, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+
+}
+
+/*Tipo de letra de toda la página*/
 *{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-ul, li{
-    list-style: none;
+
+#idSide{
+    display: flex;
+    justify-content: right; 
+    width: 100%;
+    height: 100%;
+}
+
+#idSideHijo{
+    display: flex;
+    width: 25%;
+       
 }
 
 
-/* Por clase */
 .navegacion{
     color: rgb(158, 253, 4);
     background-color: rgb(61, 61, 185);
@@ -32,7 +61,7 @@ ul, li{
 
 
 
-/* por id con #*/
+
 
 
 #menuNavegacion{
