--- a/html - css - boostrap/css/styles.css
+++ b/html - css - boostrap/css/styles.css
@@ -7,6 +7,28 @@
 
 /* DESARROLLO */
 
+/* Ajustes previos de la página */
+/* Tipo de letra de la página */
+
+*{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* Display de la página */
+main{
+    display: flexbox;
+}
+
+/* Gradiante del fondo de la página */
+
+body{
+    background: rgb(34,193,195);
+    background: radial-gradient(circle, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+
+}
+
+/* HEADER Y SU GRADIANTE */
+
 header{
     text-align: center;
     color: #034f84;
@@ -15,86 +37,80 @@ header{
     -webkit-text-fill-color: transparent;
 }
 
-main{
-    display: flexbox;
+
+
+/* MENU DE NAVEGACION */
+
+.menuNavegacion{
+    display: flex;
+    justify-content:center ;
+    
+}
+
+#idMenuNavegacion{
+    display: flex;
+    width: 100%;
+    font-family: sans-serif;
+    justify-content: space-around;
+    
+}
+
+#idMenuNavegacion li{
+    display: block;
+    width: 200px;
+    height: 50px;
+    border: 1px solid #000;
+    text-align: center;
+}
+
+#idMenuNavegacion a{
+    display:grid;
+    width: 200px;
+    height: 50px;
+    text-decoration: none;
+    background-color: lightsteelblue;
+    color: black;
+    justify-content:center;
+    align-content: center;
+}
+
+#idMenuNavegacion a:hover {
+	background-color:#009;
+	color:rgb(255, 0, 0);
 }
 
 
-/* Gradiante del fondo de la página */
-body{
-    background: rgb(34,193,195);
-    background: radial-gradient(circle, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+/* Subtitulo */
 
+.subtitulo{
+    display: flex;
+    justify-content: center;
 }
 
-/*Tipo de letra de toda la página*/
-*{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+
+/* ASIDE */
 
 #idSide{
-    display: flex;
-    justify-content: right; 
+    display:flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
     width: 100%;
     height: 100%;
 }
 
 #idSideHijo{
-    display: flex;
-    width: 25%;
-       
+    margin-top: 20px;
+    width: 20%;
+    height: 50%;
+    background-color: black;
+    color: white;
 }
 
+/* Listas */
 
-.navegacion{
-    color: rgb(158, 253, 4);
-    background-color: rgb(61, 61, 185);
-    border: 2px black dotted;
-    width: 120px;
-    height: 20px;
-    border-radius: 15%;
-    text-align:center;
-    margin: auto;
-    margin-top: 10px;
-    padding: 10px;
+.listaUno{
+   margin-top: -20px;
+
 }
-
-
-
-
-
-
-#menuNavegacion{
-    margin: 10px;
-    width: 900px;
-    font-family: sans-serif;
-    color: red;
-    
-}
-
-#menuNavegacion li{
-    display: block;
-    width: 120px;
-    float:left;
-    margin-left: 2px;
-    border: 1px solid #000;
-}
-
-#menuNavegacion a{
-    display:block;
-    padding:1px;
-    text-decoration: none;
-    background-color: lightsteelblue;
-    color: black;
-    font-size: small;
-    text-align: center;
-}
-
-#mainMenu a:hover {
-	background-color:#009;
-	color:lightcoral;
-}
-
-
 
 
